# wm

./: Cargo.toml  build.sh  penrose-cfg.desktop  xephyr.sh
src/: aaaa.rs  logger.rs  main.rs  theme.rs
