[package]
name = "penrose-wm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penrose = { git = "https://github.com/sminez/penrose", version = "0.3.1" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
xdg = "^2.1"
chrono = "0.4.23"